moved signup button to bottom

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -38,12 +38,12 @@
                 <h4>Pick out ur new roommates with ease!</h4>
             </div>
             <div class="btn-group">
-                <a class="btn btn-lg btn-success" href="{{url_for('signupPage')}}">Sign Up Now!</a>
-            </div>
-            <div class="btn-group">
                 <button class="btn btn-success yesButton">YEUUUHHH</button>
                 <button class="btn btn-danger noButton">NOIIII</button>
             </div>
+            <div class="btn-group">
+                    <a class="btn btn-lg btn-primary" href="{{url_for('signupPage')}}">Sign Up Now!</a>
+                </div>
         </div>
     </div>
 
