--- a/static/styles.css
+++ b/static/styles.css
@@ -29,7 +29,7 @@ body{
     background-image: url("/static/carousel/Planting.jpeg");
     background-repeat: no-repeat;
     background-position: center;
-    width: 100vw;
+    height: 100vh;
     background-size: cover;
     color:white;
     text-align: center;
