--- a/templates/landing.html
+++ b/templates/landing.html
@@ -26,8 +26,8 @@
         </div>
     </div>
 </div>
-<div id="tutorial">
-        <div class="card">
+<div id="tutorial"  class="d-flex justify-content-center">
+        <div class="card" id="tutorialSwipe">
             <div class="card-header">
                 <h2>Swipe to Adopt!</h2>
             </div>
