--- a/static/styles.css
+++ b/static/styles.css
@@ -29,7 +29,6 @@ body{
     background-image: url("/static/carousel/Planting.jpeg");
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
     background-size: cover;
     color:white;
     text-align: center;
@@ -39,6 +38,7 @@ body{
     background-image: url("/static/carousel/Planting.jpeg");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
    
     color:white;
     text-align: center;
