--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 
-
 {% block content %}
-
 <!-- !!!   slider  -->
 <div id="slides">
     <div class="overlay"></div>
@@ -17,34 +15,32 @@
     </div>
     <div class="titleMessage">
         <div class="heading">
-
             <p class="main animated fadeInRight">Trans<span><i class="fab fa-envira"></span></i> Plant</p>
             <p class="sub typed">The love of gardening is a seed once sown that never dies.
             </p>
-
             <a href="#tutorial" class="btn btn-lg btn-success">Get Started!</a>
         </div>
     </div>
 </div>
-<div id="tutorial"  class="d-flex justify-content-center">
-        <div class="card" id="tutorialSwipe">
-            <div class="card-header">
-                <h2>Swipe to Adopt!</h2>
-            </div>
-            <div class ="plantImageDiv" >
-                <img class="plantImage" src="{{"https://i.redd.it/9cmnyrqbstcz.jpg"}}"/>
-            </div>
-            <div class="card-body">
-                <h4>Pick out ur new roommates with ease!</h4>
-            </div>
-            <div class="btn-group">
-                <button class="btn btn-success ">YEUUUHHH</button>
-                <button class="btn btn-danger ">NOIIII</button>
-            </div>
-            <div class="btn-group">
-                    <a class="btn btn-lg btn-primary" href="{{url_for('signupPage')}}">Sign Up Now!</a>
-                </div>
+<div id="tutorial" class="d-flex justify-content-center">
+    <div class="card" id="tutorialSwipe">
+        <div class="card-header">
+            <h2>Swipe to Adopt!</h2>
+        </div>
+        <div class="plantImageDiv">
+            <img class="plantImage" src="{{"https://i.redd.it/9cmnyrqbstcz.jpg"}}" />
+        </div>
+        <div class="card-body">
+            <h4>Pick out your new roommates with ease!</h4>
+        </div>
+        <div class="btn-group">
+            <button class="btn btn-success ">YEUUUHHH</button>
+            <button class="btn btn-danger ">NOIIII</button>
+        </div>
+        <div class="btn-group">
+            <a class="btn btn-lg btn-primary" href="{{url_for('signupPage')}}">Sign Up Now!</a>
         </div>
     </div>
+</div>
 
 {% endblock %}
