--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename = 'styles.css') }}">
@@ -20,32 +20,26 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+        <div class="buttons">
+            {% if current_user.is_authenticated %}
 
-    
-        <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="buttons">
-                    {% if current_user.is_authenticated %}
-                
-        
-                            <a class="navbar-brand" href="{{url_for('landingPage')}}" title="swipe">Home</a>
-                            <a class="navbar-brand" href="{{url_for('swipePage')}}" title="swipe">Swipe</a>
-                            <a class="navbar-brand" href="{{url_for('stream')}}" title="swipe">Profile</a>
-                            <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
-                            {% else %}
-                            <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
-                            <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
-                
-                    {% endif %}
-                </div>
-            </nav>
-        
+            <a class="navbar-brand" href="{{url_for('landingPage')}}" title="swipe">Home</a>
+            <a class="navbar-brand" href="{{url_for('swipePage')}}" title="swipe">Swipe</a>
+            <a class="navbar-brand" href="{{url_for('stream')}}" title="swipe">Profile</a>
+            <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
+            {% else %}
+            <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
+            <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
+
+            {% endif %}
+        </div>
+    </nav>
 
     <!-- Adding carousel  -->
     <div class="columns">
-
         {% block content %}
         {% endblock %}
-
     </div>
 
 
