code clean up has been done and added animation on homepage paragraph

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -16,12 +16,14 @@
     <div class="titleMessage">
         <div class="heading">
             <p class="main animated fadeInRight">Trans<span><i class="fab fa-envira"></span></i> Plant</p>
-            <p class="sub typed">The love of gardening is a seed once sown that never dies.
+            <p class="sub animated fadeInLeftBig">The love of gardening is a seed once sown that never dies.
             </p>
             <a href="#tutorial" class="btn btn-lg btn-success">Get Started!</a>
         </div>
     </div>
 </div>
+
+
 <div id="tutorial" class="d-flex justify-content-center">
     <div class="card" id="tutorialSwipe">
         <div class="card-header">
