--- a/templates/landing.html
+++ b/templates/landing.html
@@ -38,8 +38,8 @@
                 <h4>Pick out ur new roommates with ease!</h4>
             </div>
             <div class="btn-group">
-                <button class="btn btn-success ">YEUUUHHH</button>
-                <button class="btn btn-danger ">NOIIII</button>
+                <button class="yesButton btn btn-success ">YEUUUHHH</button>
+                <button class="noButton btn btn-danger ">NOIIII</button>
             </div>
             <div class="btn-group">
                     <a class="btn btn-lg btn-primary" href="{{url_for('signupPage')}}">Sign Up Now!</a>
