preparing sql heroku

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -19,8 +19,7 @@
         <div class="heading">
 
             <p class="main animated fadeInRight">Trans<span><i class="fab fa-envira"></span></i> Plant</p>
-            <p class="sub typed">The love of gardening is a seed once sown that never dies.
-            </p>
+            <p class="sub animated fadeInLeftBig">The love of gardening is a seed once sown that never dies.
 
             <a href="#tutorial" class="btn btn-lg btn-success">Get Started!</a>
         </div>
